--- a/msc-data/meteocode/readme_meteocode_en/index.html
+++ b/msc-data/meteocode/readme_meteocode_en/index.html
@@ -88,7 +88,7 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#scribe-matrix-meteocode-data">Scribe matrix meteocode data</a></li>
+        <li class="main active"><a href="#terrestrial-scribe-matrix-meteocode-data">Terrestrial Scribe matrix meteocode data</a></li>
             <li><a href="#access">Access</a></li>
             <li><a href="#technical-documentation">Technical documentation</a></li>
             <li><a href="#change-log">Change log</a></li>
@@ -99,12 +99,12 @@
 <p><a href="../readme_meteocode_fr/">En français</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; Meteocode forecast data</p>
-<h1 id="scribe-matrix-meteocode-data">Scribe matrix meteocode data</h1>
+<h1 id="terrestrial-scribe-matrix-meteocode-data">Terrestrial Scribe matrix meteocode data</h1>
 <p>The meteocode is a standard used by the Scribe system to describe the elements of time.
 It allows to encode according to a specific standard the concepts representing the meteorological events resulting from the digital synthesis of the Scribe matrix content.</p>
 <h2 id="access">Access</h2>
 <h3 id="how-to-access-the-data">How to access the data</h3>
-<p>These data are available on the data server services <a href="../../../msc-datamart/readme_en/">MSC Datamart</a> and the web services <a href="../../../msc-geomet/readme_en/">MSC GeoMet</a> respectively :</p>
+<p>These terrestrial data are available on the data server services <a href="../../../msc-datamart/readme_en/">MSC Datamart</a> and the web services <a href="../../../msc-geomet/readme_en/">MSC GeoMet</a> respectively :</p>
 <ul>
 <li><a href="../readme_meteocode-datamartcsv_en/">CSV data available on the MSC Datamart</a> </li>
 <li><a href="../readme_meteocode-datamartxml_en/">XML data available on the MSC Datamart</a> </li>
