--- a/msc-data/meteocode/readme_meteocode_fr/index.html
+++ b/msc-data/meteocode/readme_meteocode_fr/index.html
@@ -88,7 +88,7 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#donnees-du-meteocode-des-matrices-scribe">Données du meteocode des matrices Scribe</a></li>
+        <li class="main active"><a href="#donnees-du-meteocode-des-matrices-scribe-terrestres">Données du meteocode des matrices Scribe terrestres</a></li>
             <li><a href="#acces">Accès</a></li>
             <li><a href="#documentation-technique">Documentation technique</a></li>
             <li><a href="#registre-des-changements">Registre des changements</a></li>
@@ -99,12 +99,12 @@
 <p><a href="../readme_meteocode_en/">In English</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; Données de prévision meteocode</p>
-<h1 id="donnees-du-meteocode-des-matrices-scribe">Données du meteocode des matrices Scribe</h1>
+<h1 id="donnees-du-meteocode-des-matrices-scribe-terrestres">Données du meteocode des matrices Scribe terrestres</h1>
 <p>Le meteocode est un standard utilisé par le système Scribe pour décrire les éléments du temps.
 Il permet d'encoder selon une norme spécifique les concepts représentant les évènements météorologiques résultant de la synthèse numérique du contenu des matrices Scribe.</p>
 <h2 id="acces">Accès</h2>
 <h3 id="comment-acceder-aux-donnees">Comment accéder aux données</h3>
-<p>Ces données sont respectivement disponibles sur les services du serveur de données <a href="../../../msc-datamart/readme_fr/">Datamart du SMC</a> et les services web <a href="../../../msc-geomet/readme_fr/">GeoMet du SMC</a> :</p>
+<p>Ces données sur le domaine terrestre sont respectivement disponibles sur les services du serveur de données <a href="../../../msc-datamart/readme_fr/">Datamart du SMC</a> et les services web <a href="../../../msc-geomet/readme_fr/">GeoMet du SMC</a> :</p>
 <ul>
 <li><a href="../readme_meteocode-datamartcsv_fr/">Données CSV disponibles sur le Datamart du SMC</a> </li>
 <li><a href="../readme_meteocode-datamartxml_fr/">Données XML disponibles sur le Datamart du SMC</a> </li>
