--- a/msc-data/nwp_gdwps/changelog_gdwps_en/index.html
+++ b/msc-data/nwp_gdwps/changelog_gdwps_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-global-deterministic-wave-prediction-system-gdwps">Chronology of changes to the Global Deterministic Wave Prediction System (GDWPS)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#wednesday-november-1-2017">Wednesday November 1, 2017</a></li>
             <li><a href="#tuesday-june-23-2015">Tuesday June 23, 2015</a></li>
     </ul>
@@ -99,6 +100,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_gdwps_en/">GDWPS</a> &gt; GDWPS Changelog</p>
 <h1 id="chronology-of-changes-to-the-global-deterministic-wave-prediction-system-gdwps">Chronology of changes to the Global Deterministic Wave Prediction System (GDWPS)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-version-160-of-the-gdwps-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 1.6.0 of the GDWPS adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="wednesday-november-1-2017">Wednesday November 1, 2017</h2>
 <h3 id="the-global-deterministic-wave-prediction-system-gdwps-is-declared-operational-at-the-canadian-meteorological-centre-cmc">The Global Deterministic Wave Prediction System (GDWPS) is declared operational at the Canadian Meteorological Centre (CMC)</h3>
 <p>Effective November 1, 2017, after over two years running in experimental mode, the Canadian Meteorological Centre (CMC) of the Meteorological Service of Canada declared operational the Global Deterministic Wave Prediction System (GDWPS v1.3.0).</p>
