--- a/msc-data/nwp_gdwps/changelog_gdwps_fr/index.html
+++ b/msc-data/nwp_gdwps/changelog_gdwps_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-global-de-prevision-deterministe-des-vagues-sgpdv">Chronologie des changements apportés au Système global de prévision déterministe des vagues (SGPDV)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-mercredi-1er-novembre-2017">Le mercredi 1er novembre 2017</a></li>
             <li><a href="#le-mardi-23-juin-2015">Le mardi 23 juin 2015</a></li>
     </ul>
@@ -99,6 +100,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_gdwps_fr/">SGPDV</a> &gt; Changements au SGPDV</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-global-de-prevision-deterministe-des-vagues-sgpdv">Chronologie des changements apportés au Système global de prévision déterministe des vagues (SGPDV)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-du-sgpdv-a-la-version-160-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours du SGPDV à la version 1.6.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-mercredi-1er-novembre-2017">Le mercredi 1er novembre 2017</h2>
 <h3 id="le-systeme-global-de-prevision-deterministe-des-vagues-sgpdv-est-declare-operationnel-au-centre-meteorologique-canadien-cmc">Le Système global de prévision déterministe des vagues (SGPDV) est déclaré opérationnel au Centre météorologique canadien (CMC)</h3>
 <p>En date du 1er novembre 2017, suite à plus de deux ans d’exécution en mode expérimental, le Centre météorologique canadien (CMC) du Service météorologique du Canada déclare opérationnel le Système global de prévision déterministe des vagues (SGPDV v1.3.0).</p>
