--- a/msc-data/nwp_geps/changelog_geps_en/index.html
+++ b/msc-data/nwp_geps/changelog_geps_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-global-ensemble-prediction-system-geps">Chronology of changes to the Global Ensemble Prediction System (GEPS)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#tuesday-july-23-2019">Tuesday July 23, 2019</a></li>
             <li><a href="#wednesday-july-3-2019">Wednesday July 3, 2019</a></li>
             <li><a href="#tuesday-september-18-2018">Tuesday September 18, 2018</a></li>
@@ -104,6 +105,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_geps_en/">GEPS</a> &gt; GEPS Changelog</p>
 <h1 id="chronology-of-changes-to-the-global-ensemble-prediction-system-geps">Chronology of changes to the Global Ensemble Prediction System (GEPS)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-version-610-of-the-geps-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 6.1.0 of the GEPS adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="tuesday-july-23-2019">Tuesday July 23, 2019</h2>
 <h3 id="additional-observations-data-in-the-global-ensemble-prediction-system-geps-at-the-canadian-meteorological-centre">Additional observations data in the Global Ensemble Prediction System (GEPS) at the Canadian Meteorological Centre</h3>
 <p>On Tuesday July 23rd 2019, starting with the 0600 UTC run, the Meteorological Service of Canada's Canadian Meteorological Centre (CMC) proceeded with an update of its Global Ensemble Prediction System (GEPS).</p>
