--- a/msc-data/nwp_giops/changelog_giops_fr/index.html
+++ b/msc-data/nwp_giops/changelog_giops_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-global-de-prevision-ocean-glace-sgpog">Chronologie des changements apportés au Système global de prévision océan-glace (SGPOG)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#wednesday-july-3-2019">Wednesday July 3, 2019</a></li>
             <li><a href="#le-mercredi-1-novembre-2017">Le mercredi 1 novembre 2017</a></li>
             <li><a href="#le-mardi-21-juin-2016">Le mardi 21 juin 2016</a></li>
@@ -101,6 +102,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_giops_fr/">SGPOG</a> &gt; Changements au SGPOG</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-global-de-prevision-ocean-glace-sgpog">Chronologie des changements apportés au Système global de prévision océan-glace (SGPOG)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-du-sgpog-a-la-version-321-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours du SGPOG à la version 3.2.1 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="wednesday-july-3-2019">Wednesday July 3, 2019</h2>
 <h3 id="mise-a-jour-du-systeme-global-de-prevision-ocean-glace-sgpog-300-du-centre-meteorologique-canadien-cmc">Mise à jour du Système global de prévision océan-glace (SGPOG) 3.0.0 du Centre météorologique canadien (CMC)</h3>
 <p>Le mercredi 3 juillet 2019, le Centre météorologique canadien (CMC) va procéder à la mise en œuvre opérationnelle de la version 3.0.0 de son Système global de prévision océan-glace (SGPOG).
