--- a/msc-data/nwp_hrdps/changelog_hrdps_fr/index.html
+++ b/msc-data/nwp_hrdps/changelog_hrdps_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-haute-resolution-de-prevision-deterministe-shrpd">Chronologie des changements apportés au système haute résolution de prévision déterministe (SHRPD)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</a></li>
             <li><a href="#le-mardi-18-septembre-2018">Le mardi 18 septembre 2018</a></li>
             <li><a href="#le-jeudi-14-decembre-2017">Le jeudi 14 décembre 2017</a></li>
@@ -106,6 +107,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_hrdps_fr/">SHRPD</a> &gt; Changements au SHRPD</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-haute-resolution-de-prevision-deterministe-shrpd">Chronologie des changements apportés au système haute résolution de prévision déterministe (SHRPD)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-du-shrpd-a-la-version-520-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours du SHRPD à la version 5.2.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</h2>
 <h3 id="mise-a-jour-majeure-vers-la-version-510-du-systeme-haute-resolution-de-prevision-deterministe-shrpd-au-centre-meteorologique-canadien-cmc">Mise à jour majeure vers la version 5.1.0 du système haute résolution de prévision déterministe (SHRPD) au Centre météorologique canadien (CMC)</h3>
 <p>Le mercredi 3 juillet 2019, à compter de la passe de 1200 UTC, le Centre météorologique canadien (CMC) mettra à jour le système haute résolution de prévision déterministe (SHRPD) à la version 5.1.0.
