--- a/msc-data/nwp_nowcasting/changelog_nowcasting_en/index.html
+++ b/msc-data/nwp_nowcasting/changelog_nowcasting_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-integrated-nowcasting-system-incs">Chronology of changes to the Integrated Nowcasting System (INCS)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#thursday-july-09-2015">Thursday July 09, 2015</a></li>
             <li><a href="#wednesday-november-20-2013">Wednesday November 20 2013</a></li>
             <li><a href="#tuesday-august-7-2012">Tuesday August 7 2012</a></li>
@@ -100,6 +101,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_nowcasting_en/">Nowcasting</a> &gt; Nowcasting Changelog</p>
 <h1 id="chronology-of-changes-to-the-integrated-nowcasting-system-incs">Chronology of changes to the Integrated Nowcasting System (INCS)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-incs-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to INCS adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="thursday-july-09-2015">Thursday July 09, 2015</h2>
 <h3 id="the-canadian-meteorological-centre-upgrades-the-incs-nowcast-system-to-version-15">The Canadian Meteorological Centre Upgrades the INCS (Nowcast system) to version 1.5</h3>
 <p>Starting on July 09, 2015 with the 1400 UTC run the Canadian Meteorological Centre (CMC) will update the Integrated NowCasting System (INCS). This system provides both observation data and very short term forecasts to the Scribe forecast production system. This upgrade improves mainly the quality of the component that processes the radar data of this system.</p>
