--- a/msc-data/nwp_nowcasting/changelog_nowcasting_fr/index.html
+++ b/msc-data/nwp_nowcasting/changelog_nowcasting_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-integre-de-prevision-immediate-sipi">Chronologie des changements apportés au Système intégré de prévision immédiate (SIPI)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-jeudi-09-juillet-2015">Le jeudi 09 juillet 2015</a></li>
             <li><a href="#le-20-novembre-2013">Le 20 novembre 2013</a></li>
             <li><a href="#le-mardi-7-aout-2012">Le mardi 7 août 2012</a></li>
@@ -100,6 +101,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_nowcasting_fr/">Prévision immédiate</a> &gt; Changements au système SIPI</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-integre-de-prevision-immediate-sipi">Chronologie des changements apportés au Système intégré de prévision immédiate (SIPI)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-de-sipi-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours de SIPI suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-jeudi-09-juillet-2015">Le jeudi 09 juillet 2015</h2>
 <h3 id="le-centre-meteorologique-canadien-ameliore-son-systeme-sipi-a-version-15">Le Centre Météorologique Canadien améliore son système SIPI à version 1.5</h3>
 <p>Le jeudi 09 juillet 2015 à partir de 1400 UTC, le Centre Météorologique Canadien (CMC) a procédé à une mise à jour son système intégré de prévisions immédiates (SIPI). Ce système fournit à la fois des données d'observations ainsi que des prévisions à très court terme au système de production des prévisions Scribe. Cette mise à jour, amèliore, entre autres, principalement la qualité de la composante qui traite les données radar de ce système.</p>
