--- a/msc-data/nwp_rdps-cgsl/changelog_rdps-cgsl_en/index.html
+++ b/msc-data/nwp_rdps-cgsl/changelog_rdps-cgsl_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-coupled-atmosphere-ocean-ice-forecast-system-gulf-of-st-lawrence">Chronology of changes to the Coupled Atmosphere-Ocean-Ice Forecast System - Gulf of St-Lawrence</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#tuesday-november-18th-2014">Tuesday November 18th 2014</a></li>
             <li><a href="#wednesday-october-3-2012">Wednesday October 3 2012</a></li>
     </ul>
@@ -99,6 +100,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_rdps-cgsl_en/">SRPD-CGSL</a> &gt;  Coupled Atmosphere-Ocean-Ice Forecast System - Gulf of St-Lawrence Changelog</p>
 <h1 id="chronology-of-changes-to-the-coupled-atmosphere-ocean-ice-forecast-system-gulf-of-st-lawrence">Chronology of changes to the Coupled Atmosphere-Ocean-Ice Forecast System - Gulf of St-Lawrence</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-version-350-of-the-rdps-cgsl-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 3.5.0 of the RDPS-CGSL adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="tuesday-november-18th-2014">Tuesday November 18th 2014</h2>
 <h3 id="major-upgrade-to-the-coupled-atmosphere-ocean-ice-forecast-system-gulf-of-st-lawrence-at-the-canadian-meteorological-centre">Major Upgrade to the Coupled Atmosphere-Ocean-Ice Forecast System - Gulf of St-Lawrence  at the Canadian Meteorological Centre</h3>
 <p>On Tuesday November 18th 2014, starting with the 1200 UTC run the Meteorological Service of Canada's Canadian Meteorological Centre (CMC) will update the operational regional Marine Prediction system (RMPS-GSL) and the associated Regional Deterministic Prediction System - Coupled in the Gulf of St-Lawrence (RDPS-CGSL). The RMPS-GSL version will be updated to 6.0.0 and the RDPS-CGSL will be 3.0.0. Here are the major changes:</p>
