--- a/msc-data/nwp_rdps-cgsl/changelog_rdps-cgsl_fr/index.html
+++ b/msc-data/nwp_rdps-cgsl/changelog_rdps-cgsl_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-de-prevision-couple-atmosphere-ocean-glace-du-golfe-st-laurent-srpd-cgsl">Chronologie des changements apportés au Système de prévision couplé atmosphère-océan-glace du golfe St-Laurent (SRPD-CGSL)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-mardi-18-novembre-2014">Le mardi 18 novembre 2014</a></li>
             <li><a href="#le-mercredi-3-octobre-2012">Le mercredi, 3 octobre 2012</a></li>
     </ul>
@@ -99,6 +100,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_rdps-cgsl_fr/">SRPD-CGSL</a> &gt; Changements au Système de prévision couplé atmosphère-océan-glace du golfe St-Laurent</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-de-prevision-couple-atmosphere-ocean-glace-du-golfe-st-laurent-srpd-cgsl">Chronologie des changements apportés au Système de prévision couplé atmosphère-océan-glace du golfe St-Laurent (SRPD-CGSL)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-du-srpd-cgsl-a-la-version-350-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours du SRPD-CGSL à la version 3.5.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-mardi-18-novembre-2014">Le mardi 18 novembre 2014</h2>
 <h3 id="mise-a-jour-majeure-du-systeme-de-prevision-couple-atmosphere-ocean-glace-du-golfe-st-laurent-du-centre-meteorologique-canadien-cmc">Mise à jour majeure du système de prévision couplé atmosphère-océan-glace du golfe St-Laurent du Centre meteorologique canadien (CMC)</h3>
 <p>Le mardi 18 novembre 2014, à compter de la passe de 1200 UTC, le Centre météorologique canadien (CMC) va procéder à la mise en œuvre opérationnelle du système régional de prévision marine du golfe Saint-Laurent (SRPM-GSL) et du système régional de prévision déterministe - couplé au golfe du Saint-Laurent (SRPD-CGSL) associé. La version du SRPM-GSL sera 6.0.0 tandis que celle du SRPD-CGSL sera 3.0.0. Ci-dessous les changements les plus importants :</p>
