--- a/msc-data/nwp_rdwps/changelog_rdwps_en/index.html
+++ b/msc-data/nwp_rdwps/changelog_rdwps_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-regional-deterministic-wave-prediction-system-rdwps">Chronology of changes to the Regional Deterministic Wave Prediction System (RDWPS)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#monday-march-4-2019">Monday March 4, 2019</a></li>
             <li><a href="#wednesday-april-4-2018">Wednesday April 4, 2018</a></li>
             <li><a href="#monday-may-7-2012">Monday May 7 2012</a></li>
@@ -100,6 +101,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_rdwps_en/">RDWPS</a> &gt; RDWPS Changelog</p>
 <h1 id="chronology-of-changes-to-the-regional-deterministic-wave-prediction-system-rdwps">Chronology of changes to the Regional Deterministic Wave Prediction System (RDWPS)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-version-340-of-the-rdwps-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 3.4.0 of the RDWPS adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="monday-march-4-2019">Monday March 4, 2019</h2>
 <h3 id="upgrades-to-the-regional-deterministic-wave-prediction-system-rdwps-at-the-canadian-meteorological-centre-cmc">Upgrades to the Regional Deterministic Wave Prediction System (RDWPS) at the Canadian Meteorological Centre (CMC)</h3>
 <p>Effective March 4, 2019, the Canadian Meteorological Centre (CMC) of the Meteorological Service of Canada will update the Regional Deterministic Wave Prediction System (RDWPS) to v3.2.0.</p>
