--- a/msc-data/nwp_rdwps/changelog_rdwps_fr/index.html
+++ b/msc-data/nwp_rdwps/changelog_rdwps_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-regional-de-prevision-deterministe-de-vagues-srpdv">Chronologie des changements apportés au Système régional de prévision déterministe de vagues (SRPDV)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-lundi-4-mars-2019">Le lundi 4 mars 2019</a></li>
             <li><a href="#le-mercredi-4-avril-2018">Le mercredi 4 avril 2018</a></li>
             <li><a href="#le-lundi-7-mai-2012">Le lundi 7 mai, 2012</a></li>
@@ -100,6 +101,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_rdwps_fr/">SRPDV</a> &gt; Changements au SRPDV</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-regional-de-prevision-deterministe-de-vagues-srpdv">Chronologie des changements apportés au Système régional de prévision déterministe de vagues (SRPDV)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-du-srpdv-a-la-version-340-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours du SRPDV à la version 3.4.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-lundi-4-mars-2019">Le lundi 4 mars 2019</h2>
 <h3 id="mise-a-jour-du-systeme-regional-de-prevision-deterministe-des-vagues-srpdv-au-centre-meteorologique-canadien-cmc">Mise à jour du Système régional de prévision déterministe des vagues (SRPDV) au Centre météorologique canadien (CMC)</h3>
 <p>Le lundi 4 mars 2019, le Centre météorologique canadien (CMC) du Service météorologique du Canada (SMC) va procéder à la mise en œuvre opérationnelle de la version 3.2.0 de son Système régional de prévision déterministe des vagues (SRPDV).</p>
