--- a/msc-data/readme_fr/index.html
+++ b/msc-data/readme_fr/index.html
@@ -137,6 +137,7 @@
 <li><a href="../nwp_hrdpa-watershed/readme_hrdpa-watershed_fr/">Précipitations moyennes par bassin-versant de l'Analyse à haute résolution déterministe de précipitation (AHRDP bassin-versant)</a>)</li>
 <li><a href="../nwp_nowcasting/readme_nowcasting_fr/">Matrices Scribe de prévision immédiates</a></li>
 <li><a href="../nwp_rdps-cgsl/readme_rdps-cgsl_fr/">Système régional de prévision déterministe couplé au Golfe du Saint-Laurent (SRPD couplé Golfe du Saint-Laurent)</a></li>
+<li><a href="../nwp_wcps/readme_wcps_fr/">Système de prévision du cycle de l'eau (SPCE)</a></li>
 <li><a href="../prev_vertical-profiles/readme_prev-vertical-pfl_fr/">Profils verticaux à partir du Système régional de prévision déterministe (SRPD)</a></li>
 </ul>
 </li>
