--- a/msc-data/meteocode/readme_meteocode-datamartxml_en/index.html
+++ b/msc-data/meteocode/readme_meteocode-datamartxml_en/index.html
@@ -105,7 +105,7 @@
 <h1 id="data-address">Data address</h1>
 <p>MSC Datamart data can be <a href="../../../msc-datamart/amqp_en/">automatically retrieved with the Advanced Message Queuing Protocol (AMQP)</a> as soon as they become available. An <a href="../../../usage/readme_en/">overview and examples to access and use the Meteorological Service of Canada's open data</a> is also available.</p>
 <p>The data is available via the HTTP protocol. It is possible to access it with a standard browser. In this case, we obtain a list of links giving access to a XML file.</p>
-<p>The data is available at the following address : </p>
+<p>The terrestrial data is available at the following address : </p>
 <p><a href="https://dd.weather.gc.ca/meteocode">https://dd.weather.gc.ca/meteocode/{REGION}/cmml</a></p>
 <p>where 'REGION' is one of the following value :</p>
 <ul>
