--- a/msc-data/meteocode/readme_meteocode-datamartxml_fr/index.html
+++ b/msc-data/meteocode/readme_meteocode-datamartxml_fr/index.html
@@ -105,7 +105,7 @@
 <h2 id="adresse-des-donnees">Adresse des données</h2>
 <p>Les données du Datamart du SMC peuvent être <a href="../../../msc-datamart/amqp_fr/">automatiquement récupérées avec le protocole avancé de mise en file d'attente des messages (AMQP)</a> dès qu'elles deviennent disponibles. Un <a href="../../../usage/readme_fr/">survol et exemples pour accéder et utiliser les données ouvertes du Service météorologique du Canada</a> est également disponible.</p>
 <p>Les données sont disponibles via le protocole HTTP. Il est possible d’y accéder avec un fureteur standard. Dans ce cas, on obtient une liste de liens donnant accès à un fichier XML.</p>
-<p>Les fichiers pour ces données se trouvent à l'adresse suivante :  </p>
+<p>Les fichiers pour ces données couvrant le domaine terrestre se trouvent à l'adresse suivante :  </p>
 <p><a href="https://dd.meteo.gc.ca/meteocode">https://dd.meteo.gc.ca/meteocode/{REGION}/cmml/</a></p>
 <p>où 'REGION' peut prendre une des valeurs suivantes :</p>
 <ul>
