--- a/msc-data/nwp_cansips/changelog_cansips_en/index.html
+++ b/msc-data/nwp_cansips/changelog_cansips_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-canadian-seasonal-to-inter-annual-prediction-system-cansips">Chronology of changes to the Canadian Seasonal to Inter-annual Prediction System (CanSIPS)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#wednesday-july-3-2019">Wednesday July 3, 2019</a></li>
             <li><a href="#tuesday-june-21st-2016">Tuesday June 21st, 2016</a></li>
             <li><a href="#tuesday-july-23-2013">Tuesday July 23 2013</a></li>
@@ -101,6 +102,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_cansips_en/">CanSIPS</a> &gt; CanSIPS Changelog</p>
 <h1 id="chronology-of-changes-to-the-canadian-seasonal-to-inter-annual-prediction-system-cansips">Chronology of changes to the Canadian Seasonal to Inter-annual Prediction System (CanSIPS)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-cansips-version-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade CanSIPS version adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="wednesday-july-3-2019">Wednesday July 3, 2019</h2>
 <h3 id="upgrade-to-version-2-of-the-canadian-seasonal-to-inter-annual-prediction-system-cansips-at-the-canadian-meteorological-centre">Upgrade to Version 2 of the Canadian Seasonal to Inter-annual Prediction System (CanSIPS) at the Canadian Meteorological Centre</h3>
 <p>On Wednesday July 3rd, 2019, the Meteorological Service of Canada's Canadian Meteorological Centre (CMC) will upgrade the Canadian Seasonal to Inter-annual Prediction System (CanSIPS) to version 2.
