--- a/msc-data/nwp_cansips/changelog_cansips_fr/index.html
+++ b/msc-data/nwp_cansips/changelog_cansips_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-de-prevision-interannuelle-et-saisonniere-canadien-spiscan">Chronologie des changements apportés au Système de Prévision Interannuelle et Saisonniere Canadien (SPISCAN)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</a></li>
             <li><a href="#le-mardi-21-juin-2016">Le mardi 21 juin 2016</a></li>
             <li><a href="#le-mardi-23-juillet-2013">Le mardi 23 juillet 2013</a></li>
@@ -101,6 +102,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_cansips_fr/">SPISCAN</a> &gt; Changements au SPISCAN</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-de-prevision-interannuelle-et-saisonniere-canadien-spiscan">Chronologie des changements apportés au Système de Prévision Interannuelle et Saisonniere Canadien (SPISCAN)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-de-spiscan-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours de SPISCAN suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</h2>
 <h3 id="mise-a-jour-vers-la-version-2-du-systeme-de-prevision-interannuelle-et-saisonniere-canadien-spiscan-du-centre-meteorologique-canadien-cmc">Mise à jour vers la version 2 du Système de Prévision Interannuelle et Saisonniere Canadien (SPISCAN) du Centre météorologique canadien (CMC)</h3>
 <p>En date du mercredi 3 juillet 2019, le Centre météorologique canadien (CMC) va procéder à la mise à jour du Système de Prévision Interannuelle et Saisonniere Canadien (SPISCAN) vers la version 2.</p>
