--- a/msc-data/nwp_geps/changelog_geps_fr/index.html
+++ b/msc-data/nwp_geps/changelog_geps_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-global-de-prevision-densemble-sgpe">Chronologie des changements apportés au Système global de prévision d'ensemble (SGPE)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-mardi-23-juillet-2019">Le mardi 23 juillet 2019</a></li>
             <li><a href="#le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</a></li>
             <li><a href="#le-mardi-18-septembre-2018">Le mardi 18 septembre 2018</a></li>
@@ -104,6 +105,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_geps_fr/">SGPE</a> &gt; Changements au SGPE</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-global-de-prevision-densemble-sgpe">Chronologie des changements apportés au Système global de prévision d'ensemble (SGPE)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-du-sgpe-a-la-version-610-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours du SGPE à la version 6.1.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-mardi-23-juillet-2019">Le mardi 23 juillet 2019</h2>
 <h3 id="ajout-dobservations-satellitaires-dans-les-systemes-de-prevision-suivants-du-centre-meteorologique-canadien-cmc-le-systeme-global-de-prevision-densemble-sgpe">Ajout d'observations satellitaires dans les systèmes de prévision suivants du Centre météorologique canadien (CMC): Le système global de prévision d'ensemble (SGPE)</h3>
 <p>Le mardi 23 juillet 2019, à compter de la passe de 0600 UTC, le Centre météorologique canadien (CMC) a procédé à une mise à jour du système global de prévision d'ensemble (SGPE).</p>
