--- a/msc-data/nwp_hrdpa/changelog_hrdpa_en/index.html
+++ b/msc-data/nwp_hrdpa/changelog_hrdpa_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-high-resolution-deterministic-precipitation-analysis-system-capa-hrdpa">Chronology of changes to the High Resolution Deterministic Precipitation Analysis system (CaPA-HRDPA)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#wednesday-july-3-2019">Wednesday July 3, 2019</a></li>
             <li><a href="#tuesday-september-18-2018">Tuesday September 18, 2018</a></li>
             <li><a href="#friday-march-2-2018">Friday March 2, 2018</a></li>
@@ -100,6 +101,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_hrdpa_en/">HRDPA</a> &gt; HRDPA Changelog</p>
 <h1 id="chronology-of-changes-to-the-high-resolution-deterministic-precipitation-analysis-system-capa-hrdpa">Chronology of changes to the High Resolution Deterministic Precipitation Analysis system (CaPA-HRDPA)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-version-470-of-the-capa-hrdpa-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 4.7.0 of the CaPA-HRDPA adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="wednesday-july-3-2019">Wednesday July 3, 2019</h2>
 <h3 id="upgrade-to-version-460-of-the-high-resolution-deterministic-precipitation-analysis-system-capa-hrdpa-at-the-canadian-meteorological-centre-cmc">Upgrade to version 4.6.0 of the High Resolution Deterministic Precipitation Analysis system (CaPA-HRDPA) at the Canadian Meteorological Centre (CMC)</h3>
 <p>On Wednesday July 3rd 2019, starting with the 1200 UTC run, the Canadian Meteorological Centre (CMC) of the Meteorological Service of Canada (MSC) will upgrade the High Resolution Deterministic Precipication Analysis system (CaPA-HRDPA) to version 4.6.0.</p>
