--- a/msc-data/nwp_hrdpa/changelog_hrdpa_fr/index.html
+++ b/msc-data/nwp_hrdpa/changelog_hrdpa_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-danalyse-a-haute-resolution-deterministe-de-precipitation-capa-ahrdp">Chronologie des changements apportés au système d'Analyse à Haute Résolution Déterministe de Précipitation (CaPA-AHRDP)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</a></li>
             <li><a href="#le-mardi-18-septembre-2018">Le mardi 18 septembre, 2018</a></li>
             <li><a href="#le-vendredi-2-mars-2018">Le vendredi 2 mars 2018</a></li>
@@ -100,6 +101,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_hrdpa_fr/">AHRDP</a> &gt; Changements au AHRDP</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-danalyse-a-haute-resolution-deterministe-de-precipitation-capa-ahrdp">Chronologie des changements apportés au système d'Analyse à Haute Résolution Déterministe de Précipitation (CaPA-AHRDP)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-de-capa-ahrdp-a-la-version-470-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours de CaPA-AHRDP à la version 4.7.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</h2>
 <h3 id="mise-en-uvre-de-la-version-460-du-systeme-danalyse-a-haute-resolution-deterministe-de-precipitation-capa-ahrdp-au-centre-meteorologique-canadien-cmc">Mise en œuvre de la version 4.6.0 du système d'Analyse à Haute Résolution Déterministe de Précipitation (CaPA-AHRDP) au Centre météorologique canadien (CMC)</h3>
 <p>Le mercredi 3 juillet 2019, à compter de la passe de 1200 UTC, le Centre météorologique canadien (CMC) du Service météorologique du Canada (SMC) mettra à jour le système d'Analyse à Haute Régionale Déterministe de Précipitation (CaPA-AHRDP) en le faisant passer à la version 4.6.0.</p>
