--- a/msc-data/nwp_hrdps/changelog_hrdps_en/index.html
+++ b/msc-data/nwp_hrdps/changelog_hrdps_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-high-resolution-deterministic-prediction-system-hrdps">Chronology of changes to the High Resolution Deterministic Prediction System (HRDPS)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#wednesday-july-3-2019">Wednesday July 3, 2019</a></li>
             <li><a href="#tuesday-september-18-2018">Tuesday September 18, 2018</a></li>
             <li><a href="#thursday-december-14-2017">Thursday December 14, 2017</a></li>
@@ -106,6 +107,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_hrdps_en/">HRDPS</a> &gt; HRDPS Changelog</p>
 <h1 id="chronology-of-changes-to-the-high-resolution-deterministic-prediction-system-hrdps">Chronology of changes to the High Resolution Deterministic Prediction System (HRDPS)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-version-520-of-the-hrdps-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 5.2.0 of the HRDPS adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="wednesday-july-3-2019">Wednesday July 3, 2019</h2>
 <h3 id="major-upgrade-to-version-510-of-the-high-resolution-deterministic-prediction-system-hrdps-at-the-canadian-meteorological-centre">Major upgrade to Version 5.1.0 of the High Resolution Deterministic Prediction System (HRDPS) at the Canadian Meteorological Centre</h3>
 <p>On Wednesday July 3rd, 2019, starting with the 1200 UTC run, the Canadian Meteorological Centre (CMC) of the Meteorological Service of Canada will upgrade the High Resolution Deterministic Prediction System (HRDPS) to version 5.1.0.
