--- a/msc-data/nwp_hrdps/readme_hrdps_fr/index.html
+++ b/msc-data/nwp_hrdps/readme_hrdps_fr/index.html
@@ -106,7 +106,7 @@
 <p>Ces données sont respectivement disponibles sur les services serveur de données <a href="../../../msc-datamart/readme_fr/">Datamart du SMC</a> et les services web <a href="../../../msc-geomet/readme_fr/">GeoMet du SMC</a> :</p>
 <ul>
 <li><a href="../readme_hrdps-datamart_fr/">Données GRIB2 disponibles sur le Datamart du SMC</a> </li>
-<li><a href="../readme_hrdps-datamart-alpha_fr/">Données GRIB2 expérimentales à 1km disponibles sur DD-Alpha, le site Web d'essai de données du Datamart du SMC</a> </li>
+<li><a href="../readme_hrdps-datamart-alpha_fr/">Données GRIB2 expérimentales à 1km disponibles sur le domaine ouest sur DD-Alpha, le site Web d'essai de données du Datamart du SMC</a> </li>
 <li><a href="../../../msc-geomet/readme_fr/">Données disponibles via les services web géospatiaux GeoMet-Météo</a></li>
 </ul>
 <p>Un <a href="../../../usage/readme_fr/">survol et exemples pour accéder et utiliser les données ouvertes du Service météorologique du Canada</a> est disponible.</p>
