--- a/msc-data/nwp_rdpa/changelog_rdpa_en/index.html
+++ b/msc-data/nwp_rdpa/changelog_rdpa_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-regional-deterministic-precipitation-analysis-system-capa-rdpa">Chronology of changes to the Regional Deterministic Precipitation Analysis system (CaPA-RDPA)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#wednesday-july-3-2019">Wednesday July 3, 2019</a></li>
             <li><a href="#tuesday-september-18-2018">Tuesday September 18, 2018</a></li>
             <li><a href="#wednesday-november-9-2016">Wednesday November 9, 2016</a></li>
@@ -105,6 +106,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_rdpa_en/">RDPA</a> &gt; RDPA Changelog</p>
 <h1 id="chronology-of-changes-to-the-regional-deterministic-precipitation-analysis-system-capa-rdpa">Chronology of changes to the Regional Deterministic Precipitation Analysis system (CaPA-RDPA)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-version-470-of-the-capa-rdpa-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 4.7.0 of the CaPA-RDPA adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="wednesday-july-3-2019">Wednesday July 3, 2019</h2>
 <h3 id="upgrade-to-version-460-of-the-regional-deterministic-precipitation-analysis-system-capa-rdpa-at-the-canadian-meteorological-centre-cmc">Upgrade to version 4.6.0 of the Regional Deterministic Precipitation Analysis system (CaPA-RDPA) at the Canadian Meteorological Centre (CMC)</h3>
 <p>On Wednesday July 3rd 2019, starting with the 1200 UTC run, the Canadian Meteorological Centre (CMC) of the Meteorological Service of Canada (MSC) will upgrade the Regional Deterministic Precipication Analysis system (CaPA-RDPA) to version 4.6.0.</p>
