--- a/msc-data/nwp_rdpa/changelog_rdpa_fr/index.html
+++ b/msc-data/nwp_rdpa/changelog_rdpa_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-a-lanalyse-regionale-deterministe-de-precipitation-capa-ardp">Chronologie des changements apportés à l'Analyse Régionale Déterministe de Précipitation (CaPA-ARDP)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</a></li>
             <li><a href="#le-mardi-18-septembre-2018">Le mardi 18 septembre, 2018</a></li>
             <li><a href="#le-mercredi-9-novembre-2016">Le mercredi 9 novembre 2016</a></li>
@@ -105,6 +106,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_rdpa_fr/">ARDP</a> &gt; Changements au ARDP</p>
 <h1 id="chronologie-des-changements-apportes-a-lanalyse-regionale-deterministe-de-precipitation-capa-ardp">Chronologie des changements apportés à l'Analyse Régionale Déterministe de Précipitation (CaPA-ARDP)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-de-capa-ardp-a-la-version-470-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours de CaPA-ARDP à la version 4.7.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</h2>
 <h3 id="mise-en-uvre-de-la-version-460-du-systeme-danalyse-regionale-deterministe-de-precipitation-capa-ardp-au-centre-meteorologique-canadien-cmc">Mise en œuvre de la version 4.6.0 du système d'Analyse Régionale Déterministe de Précipitation (CaPA-ARDP) au Centre météorologique canadien (CMC)</h3>
 <p>Le mercredi 3 juillet 2019, à compter de la passe de 1200 UTC, le Centre météorologique canadien (CMC) du Service météorologique du Canada (SMC) mettra à jour le système d'Analyse Régionale Déterministe de Précipitation (CaPA-ARDP) en le faisant passer à la version 4.6.0.</p>
