--- a/msc-data/nwp_reps/changelog_reps_en/index.html
+++ b/msc-data/nwp_reps/changelog_reps_en/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronology-of-changes-to-the-regional-ensemble-prediction-system-reps">Chronology of changes to the Regional Ensemble Prediction System (REPS)</a></li>
+            <li><a href="#tuesday-january-21-2020">Tuesday January 21, 2020</a></li>
             <li><a href="#wednesday-july-3-2019">Wednesday July 3, 2019</a></li>
             <li><a href="#tuesday-september-18-2018">Tuesday September 18, 2018</a></li>
             <li><a href="#tuesday-december-15-2015">Tuesday December 15, 2015</a></li>
@@ -101,6 +102,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_reps_en/">REPS</a> &gt; REPS Changelog</p>
 <h1 id="chronology-of-changes-to-the-regional-ensemble-prediction-system-reps">Chronology of changes to the Regional Ensemble Prediction System (REPS)</h1>
+<h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
+<h3 id="upgrade-to-version-310-of-the-reps-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 3.1.0 of the REPS adapted to the New High Performance Computing Infrastructure.</h3>
+<p>See details <a href="../../changelog_multisystems_en/">at this link</a></p>
 <h2 id="wednesday-july-3-2019">Wednesday July 3, 2019</h2>
 <h3 id="upgrade-to-version-300-of-the-regional-ensemble-prediction-system-reps-at-the-canadian-meteorological-centre">Upgrade to Version 3.0.0 of the Regional Ensemble Prediction System (REPS) at the Canadian Meteorological Centre</h3>
 <p>On Wednesday, July 3rd, 2019, starting with the 1200 UTC run, the Canadian Meteorological Centre (CMC) of the Meteorological Service of Canada will upgrade the Regional Ensemble Prediction System (REPS) to version 3.0.0.
