--- a/msc-data/nwp_reps/changelog_reps_fr/index.html
+++ b/msc-data/nwp_reps/changelog_reps_fr/index.html
@@ -89,6 +89,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#chronologie-des-changements-apportes-au-systeme-regional-de-prevision-densemble-srpe">Chronologie des changements apportés au Système régional de prévision d'ensemble (SRPE)</a></li>
+            <li><a href="#le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</a></li>
             <li><a href="#le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</a></li>
             <li><a href="#le-mardi-18-septembre-2018">Le mardi 18 septembre 2018</a></li>
             <li><a href="#le-mardi-15-decembre-2015">Le mardi 15 décembre 2015</a></li>
@@ -101,6 +102,9 @@
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
 <p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_reps_fr/">SRPE</a> &gt; Changements au SRPE</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-regional-de-prevision-densemble-srpe">Chronologie des changements apportés au Système régional de prévision d'ensemble (SRPE)</h1>
+<h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
+<h3 id="mise-a-jours-du-srpe-a-la-version-310-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours du SRPE à la version 3.1.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
+<p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-mercredi-3-juillet-2019">Le mercredi 3 juillet 2019</h2>
 <h3 id="mise-a-jour-du-systeme-regional-de-prevision-densemble-srpe-300-du-centre-meteorologique-canadien-cmc">Mise à jour du Système régional de prévision d'ensemble (SRPE) 3.0.0 du Centre météorologique canadien (CMC)</h3>
 <p>Le mercredi 3 juillet 2019, à compter de la passe de 1200 UTC, le Centre météorologique canadien (CMC) va procéder à la mise en œuvre opérationnelle de la version 3.0.0 de son Système régional de prévision d'ensemble (SRPE).
