--- a/msc-data/nwp_wcps/readme_wcps_en/index.html
+++ b/msc-data/nwp_wcps/readme_wcps_en/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="../../../img/favicon.ico">
-        <title>Readme radar geomet en - MSC Open Data / Données ouvertes du SMC</title>
+        <title>Readme wcps en - MSC Open Data / Données ouvertes du SMC</title>
         <link href="../../../css/bootstrap-custom.min.css" rel="stylesheet">
         <link href="../../../css/font-awesome.min.css" rel="stylesheet">
         <link href="../../../css/base.css" rel="stylesheet">
@@ -88,100 +88,40 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#weather-radar-data-available-on-msc-geomet">Weather radar data available on MSC GeoMet</a></li>
-            <li><a href="#access-to-the-geospatial-web-services">Access to the geospatial web services</a></li>
-            <li><a href="#usage">Usage</a></li>
-            <li><a href="#support">Support</a></li>
-            <li><a href="#announcement-mailing-list">Announcement mailing list</a></li>
+        <li class="main active"><a href="#data-and-products-of-the-water-cycle-prediction-system-wcps">Data and products of the Water Cycle Prediction System (WCPS)</a></li>
+            <li><a href="#access">Access</a></li>
+            <li><a href="#technical-documentation">Technical documentation</a></li>
+            <li><a href="#change-log">Change log</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
-<p><a href="../readme_radar_geomet_fr/">En français</a></p>
+<p><a href="../readme_wcps_fr/">In French</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_radar_en/">Radar</a> &gt; Radar data on MSC GeoMet</p>
-<h1 id="weather-radar-data-available-on-msc-geomet">Weather radar data available on MSC GeoMet</h1>
-<p>MSC GeoMet provides access to several popular North American weather radar composite layers. Users can build mobile apps, create interactive web maps, or display and animate weather radar layers in desktop software.</p>
-<h2 id="access-to-the-geospatial-web-services">Access to the geospatial web services</h2>
-<p>The weather radar layers are available on GeoMet-Weather via the Web Map Service (WMS) standard:</p>
+<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; WCPS</p>
+<h1 id="data-and-products-of-the-water-cycle-prediction-system-wcps">Data and products of the Water Cycle Prediction System (WCPS)</h1>
+<p>The Water Cycle Prediction System (WCPS) simulates the complete water cycle, following water as it moves from the atmosphere to the surface, through the river network and into lakes, and back to the atmosphere. WCPS was implemented over the Laurentian Great Lakes and St. Lawrence River watershed in support of Canada's obligations under the Boundary Waters Treaty (International Joint Commission 2016). </p>
+<p>WCPS is a chaine of interconnected models.  The models represent processes in the atmopshere, at the land surface and in the soil (at 10-km resolution), in large bodies of water and marine ice (at 2-km resolution), and in rivers (at 1-km resolution). WCPS produces two forecasts per day for the next three and a half days (84 hours)</p>
+<p>The Reginal Deterministic Prediction System (RDPS) provides initial and boundary conditions to a limited area version of GEM-LAM covering eastern North America. Every 7 minutes, GEM-LAM communicates with the ocean-ice model, NEMO-CICE, wihich is set up on the Great Lakes, namely Lakes Superior, Michigan-Huron, St. Claire, Erie, and Ontario. GEM-LAM informs NEMO of the precipitation that has landed on the surface of the lakes and of the state of the near-surface atmosphere. NEMO informs GEM-LAM of the surface water temperature, the extent of the ice cover, and the fluxes of latent and sensible heat and momentum. GEM-LAM also provides hourly estimates of surface runoff to the river routing model, WATROUTE. In turn, WATROUTE informes NEMO of the terrestrial runoff. </p>
+<h2 id="access">Access</h2>
+<h3 id="how-to-access-the-data">How to access the data</h3>
+<p>These datasets are available on the <a href="../../../msc-datamart/readme_en/">MSC Datamart</a> data server and from the <a href="../../../msc-geomet/readme_en/">MSC GeoMet</a> web services:</p>
 <ul>
-<li><a href="../../../msc-geomet/readme_en/">Access to GeoMet-Weather</a></li>
-<li><a href="../../../msc-geomet/web-services_en/">Technical documentation on MSC GeoMet geospatial web services</a></li>
+<li><a href="../readme_wcps_nemo-datamart_en/">WCPS NEMO NetCDF data available on the MSC Datamart</a> </li>
+<li>(upcoming) <a href="../../../msc-geomet/readme_en/">Data available via geospatial web services GeoMet-Weather</a></li>
 </ul>
-<p>Example of a web map configured to display the weather radar composite using WMS layers served by MSC GeoMet:</p>
-<div id="map" style="height: 400px;"></div>
-
-<div id="controller" role="group" aria-label="Animation controls" style="background: #ececec; padding: 0.5rem;">
-  <button id="play" class="btn btn-primary btn-sm" type="button"><i class="fa fa-play" style="padding: 0rem 1rem"></i></button>
-  <button id="pause" class="btn btn-primary btn-sm" type="button"><i class="fa fa-pause" style="padding: 0rem 1rem"></i></button>
-  <span id="info" style="padding-left: 0.5rem;"></span>
-</div>
-
-<p>MSC GeoMet's North American weather radar composite layers can be seen in action in ECCC's <a href="https://www.canada.ca/en/environment-climate-change/services/weather-general-tools-resources/weathercan.html">WeatherCAN mobile app</a>.</p>
-<h2 id="usage">Usage</h2>
-<p>The <a href="../../../usage/readme_en/">usage overview page</a> provides generic information on using these services with desktop software, mobile apps, interactive web maps and direct access. Please refer to the <a href="../../../msc-geomet/web-services_en/">technical documentation on MSC GeoMet geospatial web services</a> for detailed information. See also the <a href="../readme_radar_en/">main weather radar data page</a> which links to additional information on weather radar.</p>
-<h3 id="available-layers">Available layers</h3>
-<p>Weather radar layers are updated every 10 minutes. The last 3 hours of data is available on MSC GeoMet. </p>
-<p>North-American weather radar composite at 1 km:</p>
+<p>An <a href="../../../usage/readme_en/">overview and examples to access and use the Meteorological Service of Canada's open data</a> is available.</p>
+<h3 id="licence">Licence</h3>
+<p>The <a href="../../../licence/readme_en/">end-user licence for Environment and Climate Change Canada's data servers</a> specifies the conditions of use of these data.</p>
+<h3 id="metadata">Metadata</h3>
+<p>To come.</p>
+<h2 id="technical-documentation">Technical documentation</h2>
 <ul>
-<li>Radar precipitation rate (Rain) (1 km) [mm/hr], ID: <code>RADAR_1KM_RRAI</code></li>
-<li>Radar precipitation rate (Snow) (1 km) [cm/hr], ID: <code>RADAR_1KM_RSNO</code></li>
-<li>Radar reflectivity (Rain) (1 km) [dBZ], ID: <code>RADAR_1KM_RDBR</code></li>
-<li>Corresponding dynamic radar coverage layers:<ul>
-<li>Coverage for Rain, ID: <code>RADAR_COVERAGE_RRAI</code>. ID for inverted style: <code>RADAR_COVERAGE_RRAI.INV</code></li>
-<li>Coverage for Snow, ID: <code>RADAR_COVERAGE_RSNO</code>. ID for inverted style: <code>RADAR_COVERAGE_RSNO.INV</code></li>
+<li><a href="http://collaboration.cmc.ec.gc.ca/cmc/CMOI/product_guide/docs/tech_specifications/tech_specifications_WCPS_e.pdf">Current version of the Water Cycle Prediction System (WCPS)</a></li>
+<li><a href="http://collaboration.cmc.ec.gc.ca/cmc/CMOI/product_guide/docs/tech_notes/technote_wcps_e.pdf">Technical note</a></li>
 </ul>
-</li>
-</ul>
-<p>North-American weather radar composite at 4 km:</p>
-<ul>
-<li>Radar precipitation rate (Rain) (4 km) [mm/hr], ID: <code>RADAR_RRAI</code></li>
-<li>Radar precipitation rate (Snow) (4 km) [cm/hr], ID: <code>RADAR_RSNO</code></li>
-<li>Radar reflectivity (Rain) (4 km) [dBZ], ID: <code>RADAR_RDBR</code></li>
-<li>Radar reflectivity (Snow) (4 km) [dBZ], ID: <code>RADAR_RDBS</code></li>
-</ul>
-<h3 id="usage-tips">Usage tips</h3>
-<p>Retrieving the list of latest radar layer timesteps available:</p>
-<ul>
-<li>Users can use <code>&amp;layer=</code> in WMS GetCapabilities requests to point to a specific layer and retrieve a smaller XML payload with up-to-date temporal dimensions. Example for the 1km radar snow layer: <a href="https://geo.weather.gc.ca/geomet?service=WMS&amp;version=1.3.0&amp;request=GetCapabilities&amp;layer=RADAR_1KM_RSNO">https://geo.weather.gc.ca/geomet?service=WMS&amp;version=1.3.0&amp;request=GetCapabilities&amp;layer=RADAR_1KM_RSNO</a></li>
-<li>Additional information is available in the <a href="../../../msc-geomet/web-services_en#handling-time">handling time with WMS section</a></li>
-</ul>
-<p>WMS styles:</p>
-<ul>
-<li>In addition to the default WMS style, several alternative WMS styles with different color scales are available. The list of available WMS styles is provided in the WMS GetCapabilities response</li>
-<li>Furthermore, users can request layers with their own custom styles with the Styled Layer Descriptor (SLD) standard, please refer to the <a href="../../../msc-geomet/web-services_en#handling-styles">SLD technical documentation</a></li>
-</ul>
-<p>Legends:</p>
-<ul>
-<li>Legends are available for every WMS style. Details are provided in <a href="../../../msc-geomet/web-services_en#wms-getlegendgraphic">the WMS legend technical documentation</a></li>
-<li>Legend retrieval request example: <code>https://geo.weather.gc.ca/geomet?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=RADAR_1KM_RRAI&amp;format=image/png&amp;STYLE=RADARURPPRECIPR14-LINEAR</code></li>
-</ul>
-<p><img alt="The RADARURPPRECIPR14-LINEAR WMS legend" src="https://geo.weather.gc.ca/geomet?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=RADAR_1KM_RRAI&amp;format=image/png&amp;STYLE=RADARURPPRECIPR14-LINEAR" /></p>
-<h2 id="support">Support</h2>
-<p>The MSC GeoMet services are operational 24/7. User support is provided on a best-effort basis during normal business hours. If you have any questions about these services, please <a href="https://weather.gc.ca/mainmenu/contact_us_e.html">contact us</a>.</p>
-<h2 id="announcement-mailing-list">Announcement mailing list</h2>
-<p>We encourage users to subscribe to the <a href="https://lists.ec.gc.ca/cgi-bin/mailman/listinfo/geomet-info">GeoMet-Info</a> announcement mailing list to be informed of enhancements and changes to the MSC GeoMet services.</p>
-<p><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.css" integrity="sha256-rQq4Fxpq3LlPQ8yP11i6Z2lAo82b6ACDgd35CKyNEBw=" crossorigin="anonymous" />
-<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.js" integrity="sha256-77IKwU93jwIX7zmgEBfYGHcmeO0Fx2MoWB/ooh9QkBA=" crossorigin="anonymous"></script>
-<script>
-    function isIE() {
-      return window.navigator.userAgent.match(/(MSIE|Trident)/);
-    }
-    var head = document.getElementsByTagName('head')[0];
-    var js = document.createElement("script");
-    js.type = "text/javascript";
-    if (isIE())
-    {
-        js.src = "../../../js/radar_ie.js";
-        document.getElementById("controller").setAttribute("hidden", true);
-    }
-    else
-    {
-        js.src = "../../../js/radar.js";
-    }
-    head.appendChild(js);
-</script></p></div>
+<h2 id="change-log">Change log</h2>
+<p>The chronology of changes to the Water Cycle Prediction System (WCPS) is available <a href="../changelog_wcps_en/">here</a>.</p></div>
         </div>
 
         <footer class="col-md-12">
