--- a/msc-data/nwp_wcps/readme_wcps_fr/index.html
+++ b/msc-data/nwp_wcps/readme_wcps_fr/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="../../../img/favicon.ico">
-        <title>Readme radar geomet en - MSC Open Data / Données ouvertes du SMC</title>
+        <title>Readme wcps fr - MSC Open Data / Données ouvertes du SMC</title>
         <link href="../../../css/bootstrap-custom.min.css" rel="stylesheet">
         <link href="../../../css/font-awesome.min.css" rel="stylesheet">
         <link href="../../../css/base.css" rel="stylesheet">
@@ -88,100 +88,40 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#weather-radar-data-available-on-msc-geomet">Weather radar data available on MSC GeoMet</a></li>
-            <li><a href="#access-to-the-geospatial-web-services">Access to the geospatial web services</a></li>
-            <li><a href="#usage">Usage</a></li>
-            <li><a href="#support">Support</a></li>
-            <li><a href="#announcement-mailing-list">Announcement mailing list</a></li>
+        <li class="main active"><a href="#donnees-et-produits-du-systeme-de-prevision-du-cycle-de-leau-spce">Données et Produits du Système de prévision du cycle de l'eau (SPCE)</a></li>
+            <li><a href="#acces">Accès</a></li>
+            <li><a href="#documentation-technique">Documentation technique</a></li>
+            <li><a href="#registre-des-changements">Registre des changements</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
-<p><a href="../readme_radar_geomet_fr/">En français</a></p>
+<p><a href="../readme_wcps_en/">In English</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_radar_en/">Radar</a> &gt; Radar data on MSC GeoMet</p>
-<h1 id="weather-radar-data-available-on-msc-geomet">Weather radar data available on MSC GeoMet</h1>
-<p>MSC GeoMet provides access to several popular North American weather radar composite layers. Users can build mobile apps, create interactive web maps, or display and animate weather radar layers in desktop software.</p>
-<h2 id="access-to-the-geospatial-web-services">Access to the geospatial web services</h2>
-<p>The weather radar layers are available on GeoMet-Weather via the Web Map Service (WMS) standard:</p>
+<p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; SPCE</p>
+<h1 id="donnees-et-produits-du-systeme-de-prevision-du-cycle-de-leau-spce">Données et Produits du Système de prévision du cycle de l'eau (SPCE)</h1>
+<p>Le Système de prévision du cycle de l'eau (SPCE) simule le cycle complet de l’eau, suivant l’eau qui se déplace de l’atmosphère à la surface, par les réseaux fluviaux et vers les lacs, puis qui retourne dans l’atmosphère. Le SPCE a été mis en place pour le bassin versant des Grands Lacs Laurentiens et du fleuve Saint-Laurent à l’appui des obligations du Canada en vertu du Traité relatif aux eaux limitrophes (Commission Mixte Internationale, 2016).</p>
+<p>Le SPCE consiste en une chaîne de modèles inter-reliés. Les modèles représentent les processus dans l’atmosphère, à la surface du sol et dans le sol (à une résolution de 10 km), dans les vastes plans d’eau et la glace marine (à une résolution de 2 km) et dans les rivieres (à une résolution de 1 km). Le SPCE-GLS produit deux prévisions par jour pour les trois jours et demi suivants (84 heures). </p>
+<p>Le Système Régional de Prévision Déterministe (SRPD) fournit les conditions initiales et latérales à une version du modele numérique GEM-LAM couvrant l’est de l’Amérique du Nord. Toutes les 7 minutes, il communique avec le modèle océan-glace, NEMO-CICE, configuré sur les Grands Lacs, soit les lacs Supérieur, Michigan-Huron, Sainte Claire, Érié et Ontario. GEM-LAM informe NEMO des précipitations qui sont tombées à la surface des lacs et des conditions de l’atmosphère près de la surface. NEMO informe GEM-LAM de la température des eaux de surface, de la couverture de glace ainsi que des flux de chaleur sensible et latente et de quantité de mouvement. GEM-LAM fournit aussi des estimations horaires du ruissellement de surface au modèle de routage de rivière, WATROUTE. À son tour, WATROUTE informe NEMO à propos du ruissellement terrestre. </p>
+<h2 id="acces">Accès</h2>
+<h3 id="comment-acceder-aux-donnees">Comment accéder aux données</h3>
+<p>Ces données sont respectivement disponibles sur le serveur de données <a href="../../../msc-datamart/readme_fr/">Datamart du SMC</a> et les services web <a href="../../../msc-geomet/readme_fr/">GeoMet du SMC</a> :</p>
 <ul>
-<li><a href="../../../msc-geomet/readme_en/">Access to GeoMet-Weather</a></li>
-<li><a href="../../../msc-geomet/web-services_en/">Technical documentation on MSC GeoMet geospatial web services</a></li>
+<li><a href="../readme_wcps_nemo-datamart_fr/">Données NEMO du système de prévision du cycle de l'eau (SPCE) en format NetCDF sur les Grands Lacs et le fleuve Saint-Laurent, disponibles sur le Datamart du SMC</a> </li>
+<li>(à venir) <a href="../../../msc-geomet/readme_fr/">Données disponibles via les services web géospatiaux GeoMet-Météo</a></li>
 </ul>
-<p>Example of a web map configured to display the weather radar composite using WMS layers served by MSC GeoMet:</p>
-<div id="map" style="height: 400px;"></div>
-
-<div id="controller" role="group" aria-label="Animation controls" style="background: #ececec; padding: 0.5rem;">
-  <button id="play" class="btn btn-primary btn-sm" type="button"><i class="fa fa-play" style="padding: 0rem 1rem"></i></button>
-  <button id="pause" class="btn btn-primary btn-sm" type="button"><i class="fa fa-pause" style="padding: 0rem 1rem"></i></button>
-  <span id="info" style="padding-left: 0.5rem;"></span>
-</div>
-
-<p>MSC GeoMet's North American weather radar composite layers can be seen in action in ECCC's <a href="https://www.canada.ca/en/environment-climate-change/services/weather-general-tools-resources/weathercan.html">WeatherCAN mobile app</a>.</p>
-<h2 id="usage">Usage</h2>
-<p>The <a href="../../../usage/readme_en/">usage overview page</a> provides generic information on using these services with desktop software, mobile apps, interactive web maps and direct access. Please refer to the <a href="../../../msc-geomet/web-services_en/">technical documentation on MSC GeoMet geospatial web services</a> for detailed information. See also the <a href="../readme_radar_en/">main weather radar data page</a> which links to additional information on weather radar.</p>
-<h3 id="available-layers">Available layers</h3>
-<p>Weather radar layers are updated every 10 minutes. The last 3 hours of data is available on MSC GeoMet. </p>
-<p>North-American weather radar composite at 1 km:</p>
+<p>Un <a href="../../../usage/readme_fr/">survol et exemples pour accéder et utiliser les données ouvertes du Service météorologique du Canada</a> est disponible.</p>
+<h3 id="licence">Licence</h3>
+<p>La <a href="../../../licence/readme_fr/">licence d’utilisation finale pour les serveurs de données d’Environnement et Changement climatique Canada</a> précise les conditions d'utilisation de ces données.</p>
+<h3 id="metadonnees">Métadonnées</h3>
+<p>À venir.</p>
+<h2 id="documentation-technique">Documentation technique</h2>
 <ul>
-<li>Radar precipitation rate (Rain) (1 km) [mm/hr], ID: <code>RADAR_1KM_RRAI</code></li>
-<li>Radar precipitation rate (Snow) (1 km) [cm/hr], ID: <code>RADAR_1KM_RSNO</code></li>
-<li>Radar reflectivity (Rain) (1 km) [dBZ], ID: <code>RADAR_1KM_RDBR</code></li>
-<li>Corresponding dynamic radar coverage layers:<ul>
-<li>Coverage for Rain, ID: <code>RADAR_COVERAGE_RRAI</code>. ID for inverted style: <code>RADAR_COVERAGE_RRAI.INV</code></li>
-<li>Coverage for Snow, ID: <code>RADAR_COVERAGE_RSNO</code>. ID for inverted style: <code>RADAR_COVERAGE_RSNO.INV</code></li>
+<li><a href="http://collaboration.cmc.ec.gc.ca/cmc/CMOI/product_guide/docs/tech_specifications/tech_specifications_WCPS_f.pdf">Version actuelle du Système de prévision du cycle de l'eau (SPCE)</a></li>
+<li><a href="http://collaboration.cmc.ec.gc.ca/cmc/CMOI/product_guide/docs/tech_notes/technote_wcps_f.pdf">Note technique</a></li>
 </ul>
-</li>
-</ul>
-<p>North-American weather radar composite at 4 km:</p>
-<ul>
-<li>Radar precipitation rate (Rain) (4 km) [mm/hr], ID: <code>RADAR_RRAI</code></li>
-<li>Radar precipitation rate (Snow) (4 km) [cm/hr], ID: <code>RADAR_RSNO</code></li>
-<li>Radar reflectivity (Rain) (4 km) [dBZ], ID: <code>RADAR_RDBR</code></li>
-<li>Radar reflectivity (Snow) (4 km) [dBZ], ID: <code>RADAR_RDBS</code></li>
-</ul>
-<h3 id="usage-tips">Usage tips</h3>
-<p>Retrieving the list of latest radar layer timesteps available:</p>
-<ul>
-<li>Users can use <code>&amp;layer=</code> in WMS GetCapabilities requests to point to a specific layer and retrieve a smaller XML payload with up-to-date temporal dimensions. Example for the 1km radar snow layer: <a href="https://geo.weather.gc.ca/geomet?service=WMS&amp;version=1.3.0&amp;request=GetCapabilities&amp;layer=RADAR_1KM_RSNO">https://geo.weather.gc.ca/geomet?service=WMS&amp;version=1.3.0&amp;request=GetCapabilities&amp;layer=RADAR_1KM_RSNO</a></li>
-<li>Additional information is available in the <a href="../../../msc-geomet/web-services_en#handling-time">handling time with WMS section</a></li>
-</ul>
-<p>WMS styles:</p>
-<ul>
-<li>In addition to the default WMS style, several alternative WMS styles with different color scales are available. The list of available WMS styles is provided in the WMS GetCapabilities response</li>
-<li>Furthermore, users can request layers with their own custom styles with the Styled Layer Descriptor (SLD) standard, please refer to the <a href="../../../msc-geomet/web-services_en#handling-styles">SLD technical documentation</a></li>
-</ul>
-<p>Legends:</p>
-<ul>
-<li>Legends are available for every WMS style. Details are provided in <a href="../../../msc-geomet/web-services_en#wms-getlegendgraphic">the WMS legend technical documentation</a></li>
-<li>Legend retrieval request example: <code>https://geo.weather.gc.ca/geomet?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=RADAR_1KM_RRAI&amp;format=image/png&amp;STYLE=RADARURPPRECIPR14-LINEAR</code></li>
-</ul>
-<p><img alt="The RADARURPPRECIPR14-LINEAR WMS legend" src="https://geo.weather.gc.ca/geomet?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=RADAR_1KM_RRAI&amp;format=image/png&amp;STYLE=RADARURPPRECIPR14-LINEAR" /></p>
-<h2 id="support">Support</h2>
-<p>The MSC GeoMet services are operational 24/7. User support is provided on a best-effort basis during normal business hours. If you have any questions about these services, please <a href="https://weather.gc.ca/mainmenu/contact_us_e.html">contact us</a>.</p>
-<h2 id="announcement-mailing-list">Announcement mailing list</h2>
-<p>We encourage users to subscribe to the <a href="https://lists.ec.gc.ca/cgi-bin/mailman/listinfo/geomet-info">GeoMet-Info</a> announcement mailing list to be informed of enhancements and changes to the MSC GeoMet services.</p>
-<p><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.css" integrity="sha256-rQq4Fxpq3LlPQ8yP11i6Z2lAo82b6ACDgd35CKyNEBw=" crossorigin="anonymous" />
-<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.js" integrity="sha256-77IKwU93jwIX7zmgEBfYGHcmeO0Fx2MoWB/ooh9QkBA=" crossorigin="anonymous"></script>
-<script>
-    function isIE() {
-      return window.navigator.userAgent.match(/(MSIE|Trident)/);
-    }
-    var head = document.getElementsByTagName('head')[0];
-    var js = document.createElement("script");
-    js.type = "text/javascript";
-    if (isIE())
-    {
-        js.src = "../../../js/radar_ie.js";
-        document.getElementById("controller").setAttribute("hidden", true);
-    }
-    else
-    {
-        js.src = "../../../js/radar.js";
-    }
-    head.appendChild(js);
-</script></p></div>
+<h2 id="registre-des-changements">Registre des changements</h2>
+<p>La <a href="../changelog_wcps_fr/">chronologie des changements apportés au Système de prévision du cycle de l'eau (SPCE)</a> est disponible.</p></div>
         </div>
 
         <footer class="col-md-12">
