--- a/msc-data/nwp_wcps/readme_wcps_nemo-datamart_en/index.html
+++ b/msc-data/nwp_wcps/readme_wcps_nemo-datamart_en/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="../../../img/favicon.ico">
-        <title>Readme radar geomet en - MSC Open Data / Données ouvertes du SMC</title>
+        <title>Readme wcps nemo datamart en - MSC Open Data / Données ouvertes du SMC</title>
         <link href="../../../css/bootstrap-custom.min.css" rel="stylesheet">
         <link href="../../../css/font-awesome.min.css" rel="stylesheet">
         <link href="../../../css/base.css" rel="stylesheet">
@@ -88,100 +88,106 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#weather-radar-data-available-on-msc-geomet">Weather radar data available on MSC GeoMet</a></li>
-            <li><a href="#access-to-the-geospatial-web-services">Access to the geospatial web services</a></li>
-            <li><a href="#usage">Usage</a></li>
+        <li class="main active"><a href="#water-cycle-prediction-system-wcps-nemo-data-in-netcdf-over-the-great-lakes-and-st-lawrence-river">Water Cycle Prediction System (WCPS) NEMO data in NetCDF over the Great Lakes and St. Lawrence River</a></li>
+            <li><a href="#data-location">Data location</a></li>
+            <li><a href="#technical-specification-of-the-grid">Technical specification of the grid</a></li>
+            <li><a href="#filename-nomenclature">Filename nomenclature</a></li>
+            <li><a href="#list-of-variables">List of variables</a></li>
             <li><a href="#support">Support</a></li>
-            <li><a href="#announcement-mailing-list">Announcement mailing list</a></li>
+            <li><a href="#announcements-from-the-dd_info-mailing-list">Announcements from the dd_info mailing list</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
-<p><a href="../readme_radar_geomet_fr/">En français</a></p>
+<p><a href="../readme_wcps_nemo-datamart_fr/">In French</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_radar_en/">Radar</a> &gt; Radar data on MSC GeoMet</p>
-<h1 id="weather-radar-data-available-on-msc-geomet">Weather radar data available on MSC GeoMet</h1>
-<p>MSC GeoMet provides access to several popular North American weather radar composite layers. Users can build mobile apps, create interactive web maps, or display and animate weather radar layers in desktop software.</p>
-<h2 id="access-to-the-geospatial-web-services">Access to the geospatial web services</h2>
-<p>The weather radar layers are available on GeoMet-Weather via the Web Map Service (WMS) standard:</p>
+<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC Open Data</a> &gt; <a href="../readme_wcps_en/">WCPS</a> &gt; WCPS-NEMO on MSC Datamart </p>
+<h1 id="water-cycle-prediction-system-wcps-nemo-data-in-netcdf-over-the-great-lakes-and-st-lawrence-river">Water Cycle Prediction System (WCPS) NEMO data in NetCDF over the Great Lakes and St. Lawrence River</h1>
+<p>The ocean-ice model, NEMO-CICE, from WCPS produces hourly forecast products. These data are available in NetCDF format with a latitude and longitude grid, corresponding to a 1km resolution (0.009 x 0.009 degree).</p>
+<h2 id="data-location">Data location</h2>
+<p>MSC Datamart data can be <a href="../../../msc-datamart/amqp_en/">automatically retrieved with the Advanced Message Queuing Protocol (AMQP)</a> as soon as they become available. An <a href="../../../usage/readme_en/">overview and examples to access and use the Meteorological Service of Canada's open data</a> is also available.</p>
+<p>The data is available using the HTTP protocol and resides in a directory that is plainly accessible to a web browser. Visiting that directory with an interactive browser will yield a raw listing of links, each link being a downloadable NetCDF file.</p>
+<p>The data can be accessed at the following URLs: </p>
 <ul>
-<li><a href="../../../msc-geomet/readme_en/">Access to GeoMet-Weather</a></li>
-<li><a href="../../../msc-geomet/web-services_en/">Technical documentation on MSC GeoMet geospatial web services</a></li>
+<li><a href="https://dd.meteo.gc.ca/model_wcps/nemo/netcdf/lat_lon">https://dd.meteo.gc.ca/model_wcps/nemo/netcdf/lat_lon/{nd}/{HH}/{hhh}/</a>                  </li>
 </ul>
-<p>Example of a web map configured to display the weather radar composite using WMS layers served by MSC GeoMet:</p>
-<div id="map" style="height: 400px;"></div>
-
-<div id="controller" role="group" aria-label="Animation controls" style="background: #ececec; padding: 0.5rem;">
-  <button id="play" class="btn btn-primary btn-sm" type="button"><i class="fa fa-play" style="padding: 0rem 1rem"></i></button>
-  <button id="pause" class="btn btn-primary btn-sm" type="button"><i class="fa fa-pause" style="padding: 0rem 1rem"></i></button>
-  <span id="info" style="padding-left: 0.5rem;"></span>
-</div>
-
-<p>MSC GeoMet's North American weather radar composite layers can be seen in action in ECCC's <a href="https://www.canada.ca/en/environment-climate-change/services/weather-general-tools-resources/weathercan.html">WeatherCAN mobile app</a>.</p>
-<h2 id="usage">Usage</h2>
-<p>The <a href="../../../usage/readme_en/">usage overview page</a> provides generic information on using these services with desktop software, mobile apps, interactive web maps and direct access. Please refer to the <a href="../../../msc-geomet/web-services_en/">technical documentation on MSC GeoMet geospatial web services</a> for detailed information. See also the <a href="../readme_radar_en/">main weather radar data page</a> which links to additional information on weather radar.</p>
-<h3 id="available-layers">Available layers</h3>
-<p>Weather radar layers are updated every 10 minutes. The last 3 hours of data is available on MSC GeoMet. </p>
-<p>North-American weather radar composite at 1 km:</p>
+<p>where:</p>
 <ul>
-<li>Radar precipitation rate (Rain) (1 km) [mm/hr], ID: <code>RADAR_1KM_RRAI</code></li>
-<li>Radar precipitation rate (Snow) (1 km) [cm/hr], ID: <code>RADAR_1KM_RSNO</code></li>
-<li>Radar reflectivity (Rain) (1 km) [dBZ], ID: <code>RADAR_1KM_RDBR</code></li>
-<li>Corresponding dynamic radar coverage layers:<ul>
-<li>Coverage for Rain, ID: <code>RADAR_COVERAGE_RRAI</code>. ID for inverted style: <code>RADAR_COVERAGE_RRAI.INV</code></li>
-<li>Coverage for Snow, ID: <code>RADAR_COVERAGE_RSNO</code>. ID for inverted style: <code>RADAR_COVERAGE_RSNO.INV</code></li>
+<li><strong>nd</strong> : Spatial dimension, latitude and longitude [2d]</li>
+<li><strong>HH</strong> : Model run start, in UTC [00,12]</li>
+<li><strong>hhh</strong> : Forecast hour [001, ..., 084] </li>
 </ul>
-</li>
-</ul>
-<p>North-American weather radar composite at 4 km:</p>
+<p>A 30 day history is kept in this directory.</p>
+<h2 id="technical-specification-of-the-grid">Technical specification of the grid</h2>
+<p><img alt="Image of the WCPS-NEMO domain" src="https://collaboration.cmc.ec.gc.ca/cmc/cmos/public_doc/msc-data/nwp_wcps/grille_wcps_nemo.png" /></p>
+<p>In the white complete domain, the valid domain which covers the lakes, is in color. </p>
+<table>
+<thead>
+<tr>
+<th>Parameter</th>
+<th>Value</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>ni</td>
+<td>1681</td>
+</tr>
+<tr>
+<td>nj</td>
+<td>3181</td>
+</tr>
+<tr>
+<td>resolution at 45° N</td>
+<td>1km</td>
+</tr>
+</tbody>
+</table>
+<h2 id="filename-nomenclature">Filename nomenclature</h2>
+<p>NOTE: ALL HOURS ARE IN UTC.</p>
+<p>The files have the following nomenclature: </p>
+<p>CMC_wcps_nemo_Variable_LevelType_Level_ProjectionResolution_YYYYMMDDHH_Phhh.nc</p>
+<p>where:</p>
 <ul>
-<li>Radar precipitation rate (Rain) (4 km) [mm/hr], ID: <code>RADAR_RRAI</code></li>
-<li>Radar precipitation rate (Snow) (4 km) [cm/hr], ID: <code>RADAR_RSNO</code></li>
-<li>Radar reflectivity (Rain) (4 km) [dBZ], ID: <code>RADAR_RDBR</code></li>
-<li>Radar reflectivity (Snow) (4 km) [dBZ], ID: <code>RADAR_RDBS</code></li>
+<li><strong>CMC</strong> : Constant string indicating that the data is from the Canadian Meteorological Centre (CMC)</li>
+<li><strong>wcps_nemo</strong> : Constant string indicating that the data is from WCPS-NEMO component </li>
+<li><strong>Variable</strong> : Variable type included in this file  </li>
+<li><strong>LevelType</strong> : Level type [sfc, depth, tgl]</li>
+<li><strong>Level</strong> : Level value: 0 for sfc (surface), 0.5 for depth (lake depth in meters), 40 for tgl (altitude in meter) </li>
+<li><strong>Projection</strong> : Constant string indicating the latitude and longitude projection [latlon]</li>
+<li><strong>Resolution</strong> : Resolution in degreee 0.009x0.009 (about 1km) in latitude and longitude directions </li>
+<li><strong>YYYYMMDD</strong> : Year, month and days of the beginning of the forecast </li>
+<li><strong>HH</strong> : UTC run time [00,12]</li>
+<li><strong>Phhh</strong> : P constant character, hhh the forecast hour [001,002, ..., 084] </li>
+<li><strong>nc</strong> : constant string indicating the NetCDF format</li>
 </ul>
-<h3 id="usage-tips">Usage tips</h3>
-<p>Retrieving the list of latest radar layer timesteps available:</p>
+<p>Example:</p>
 <ul>
-<li>Users can use <code>&amp;layer=</code> in WMS GetCapabilities requests to point to a specific layer and retrieve a smaller XML payload with up-to-date temporal dimensions. Example for the 1km radar snow layer: <a href="https://geo.weather.gc.ca/geomet?service=WMS&amp;version=1.3.0&amp;request=GetCapabilities&amp;layer=RADAR_1KM_RSNO">https://geo.weather.gc.ca/geomet?service=WMS&amp;version=1.3.0&amp;request=GetCapabilities&amp;layer=RADAR_1KM_RSNO</a></li>
-<li>Additional information is available in the <a href="../../../msc-geomet/web-services_en#handling-time">handling time with WMS section</a></li>
+<li>CMC_wcps_nemo_vomecrty_depth_0.5_latlon0.009x0.009_2019011100_P036.nc</li>
 </ul>
-<p>WMS styles:</p>
+<h2 id="list-of-variables">List of variables</h2>
+<p>List of 2D variables available in the files: </p>
 <ul>
-<li>In addition to the default WMS style, several alternative WMS styles with different color scales are available. The list of available WMS styles is provided in the WMS GetCapabilities response</li>
-<li>Furthermore, users can request layers with their own custom styles with the Styled Layer Descriptor (SLD) standard, please refer to the <a href="../../../msc-geomet/web-services_en#handling-styles">SLD technical documentation</a></li>
+<li><strong>tairsurf</strong> : Air temperature at about 40 meters in height</li>
+<li><strong>uwindsurf</strong> : Wind X velocity at about 40 meters in height </li>
+<li><strong>vwindsurf</strong> : Wind Y velocity at about 40 meters in height </li>
+<li><strong>vozocrtx</strong> : Sea water X velocity at the first model layer </li>
+<li><strong>vomecrty</strong> : Sea water Y velocity at the first model layer  </li>
+<li><strong>votemper</strong> : Sea water potential temperature at the first model layer  </li>
+<li><strong>vosaline</strong> : Sea water salinity at the surface   </li>
+<li><strong>sossheig</strong> : Sea surface height above geoid </li>
+<li><strong>sokaraml</strong> : Ocean mixed layer depth based on density criterion </li>
+<li><strong>iiceconc</strong> : Sea ice area fraction </li>
+<li><strong>iicevol</strong> : Sea ice volume per unit grid cell area</li>
+<li><strong>itzocrtx</strong> : Sea ice X velocity </li>
+<li><strong>itmecrty</strong> : Sea ice Y velocity </li>
+<li><strong>iicepressure</strong> : Depth-integrated internal sea ice pressure</li>
+<li><strong>iicestrength</strong> : Depth-integrated compressive sea ice strength</li>
 </ul>
-<p>Legends:</p>
-<ul>
-<li>Legends are available for every WMS style. Details are provided in <a href="../../../msc-geomet/web-services_en#wms-getlegendgraphic">the WMS legend technical documentation</a></li>
-<li>Legend retrieval request example: <code>https://geo.weather.gc.ca/geomet?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=RADAR_1KM_RRAI&amp;format=image/png&amp;STYLE=RADARURPPRECIPR14-LINEAR</code></li>
-</ul>
-<p><img alt="The RADARURPPRECIPR14-LINEAR WMS legend" src="https://geo.weather.gc.ca/geomet?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=RADAR_1KM_RRAI&amp;format=image/png&amp;STYLE=RADARURPPRECIPR14-LINEAR" /></p>
 <h2 id="support">Support</h2>
-<p>The MSC GeoMet services are operational 24/7. User support is provided on a best-effort basis during normal business hours. If you have any questions about these services, please <a href="https://weather.gc.ca/mainmenu/contact_us_e.html">contact us</a>.</p>
-<h2 id="announcement-mailing-list">Announcement mailing list</h2>
-<p>We encourage users to subscribe to the <a href="https://lists.ec.gc.ca/cgi-bin/mailman/listinfo/geomet-info">GeoMet-Info</a> announcement mailing list to be informed of enhancements and changes to the MSC GeoMet services.</p>
-<p><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.css" integrity="sha256-rQq4Fxpq3LlPQ8yP11i6Z2lAo82b6ACDgd35CKyNEBw=" crossorigin="anonymous" />
-<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.js" integrity="sha256-77IKwU93jwIX7zmgEBfYGHcmeO0Fx2MoWB/ooh9QkBA=" crossorigin="anonymous"></script>
-<script>
-    function isIE() {
-      return window.navigator.userAgent.match(/(MSIE|Trident)/);
-    }
-    var head = document.getElementsByTagName('head')[0];
-    var js = document.createElement("script");
-    js.type = "text/javascript";
-    if (isIE())
-    {
-        js.src = "../../../js/radar_ie.js";
-        document.getElementById("controller").setAttribute("hidden", true);
-    }
-    else
-    {
-        js.src = "../../../js/radar.js";
-    }
-    head.appendChild(js);
-</script></p></div>
+<p>If you have any questions about these data, please contact us at: <a href="mailto:ec.dps-client.ec@canada.ca">ec.dps-client.ec@canada.ca</a></p>
+<h2 id="announcements-from-the-dd_info-mailing-list">Announcements from the dd_info mailing list</h2>
+<p>Announcements related to this dataset are available in the <a href="https://lists.ec.gc.ca/cgi-bin/mailman/listinfo/dd_info">dd_info</a>.</p></div>
         </div>
 
         <footer class="col-md-12">
