--- a/msc-data/readme_en/index.html
+++ b/msc-data/readme_en/index.html
@@ -147,6 +147,7 @@
 <li><a href="../nwp_hrdpa-watershed/readme_hrdpa-watershed_en/">High Resolution Deterministic Precipitation Analysis average watershed precipitation (HRDPA watershed)</a></li>
 <li><a href="../nwp_nowcasting/readme_nowcasting_en/">Scribe nowcasting matrices</a></li>
 <li><a href="../nwp_rdps-cgsl/readme_rdps-cgsl_en/">Atmosphere-Ocean-Ice forecast system for the Gulf of St. Lawrence (RDPS coupled to Gulf of St. Lawrence)</a></li>
+<li><a href="../nwp_wcps/readme_wcps_en/">Water Cycle Prediction System (WCPS)</a></li>
 <li><a href="../prev_vertical-profiles/readme_prev-vertical-pfl_en/">Vertical profiles from the Regional Deterministic Prediction System (RDPS)</a></li>
 </ul>
 </li>
