--- a/msc-geomet/web-services_fr/index.html
+++ b/msc-geomet/web-services_fr/index.html
@@ -144,7 +144,6 @@
 <h3 id="wms-getcapabilities">WMS GetCapabilities</h3>
 <p>Une requête WMS GetCapabilities permet à l'usager de récupérer un document XML contenant les métadonnées décrivant le service. Ce document contient l'information associée aux types de requêtes supportées, les systèmes de coordonnées cartographiques supportés, et particulièrement important, la liste des couches (données) disponibles.</p>
 <p>Une requête WMS GetCapabilities est composée des paramètres suivants :</p>
-<p><br></p>
 <table>
 <thead>
 <tr>
@@ -190,7 +189,6 @@
 <p>Chaque couche définie dans le document XML du WMS GetCapabilities contient l'information telle que l'identifiant de la couche et son nom, son étendue géographique, la plage temporelle ainsi que les styles disponibles.</p>
 <h3 id="wms-getmap">WMS GetMap</h3>
 <p>Une requête WMS GetMap permet aux usagers de récupérer une image (e.g. JPEG, PNG) d'une couche pour une région déterminée. Une requête WMS GetMap est constituée de plusieurs paramètres qui spécifie la couche désirée, son style, le système de coordonnées cartographiques, le pas de temps, en plus des propriétés additionnelles associées à l'image. Une <a href="#getcapabilities">requête WMS GetCapabilities</a> supporte les usagers en guidant l'utilisateur sur les valeurs possibles pour ces paramètres.</p>
-<p><br></p>
 <table>
 <thead>
 <tr>
@@ -268,7 +266,6 @@
 <p><img alt="Température de l'air du Système global de prévision déterministe (SGPD)" src="https://geo.weather.gc.ca/geomet?SERVICE=WMS&amp;VERSION=1.3.0&amp;REQUEST=GetMap&amp;BBOX=-90,-180,90,180&amp;CRS=EPSG:4326&amp;WIDTH=600&amp;HEIGHT=301&amp;LAYERS=GDPS.ETA_TT&amp;FORMAT=image/png" /> </p>
 <h3 id="wms-getfeatureinfo">WMS GetFeatureInfo</h3>
 <p>Une requête WMS GetFeatureInfo permet de récupérer les données brutes pour un lieu géographique spécifique. Une requête WMS GetFeatureInfo ressemble à une requête WMS GetMap à laquelle s'ajoute les paramètres suivants : <code>I</code>, <code>J</code> et <code>QUERY_LAYERS</code>. Ces paramètres représentent la localisation horizontale et verticale du pixel ainsi que le nom des couches à interroger.</p>
-<p><br></p>
 <table>
 <thead>
 <tr>
@@ -694,9 +691,11 @@ Rule%3E+%3C%2Fse%3AFeatureTypeStyle%3E+%3C%2FUserStyle%3E+%3C%2FNamedLayer%3E+%3
 </code></pre>
 
 <p>Dans cet exemple, la valeur <code>field</code> indique à l'usager le nom des bandes disponibles. Pour GeoMet-Climat, les bandes utilisent toujours la nomenclature suivante : <code>B</code> suivi de l'intervalle ISO8601 correspondant, soit <code>YYYY</code> pour un intervalle annuel et <code>YYYY-MM</code> pour un intervalle mensuel.</p>
-<p>Pour GeoMet-Climat, les usagers pour demander un pas de temps unique ou une plage temporelle :
-* Pas de temps unique : <code>RANGESUBSET=B20015</code>
-* Plage temporelle : <code>RANGESUBSET=B2015:B2019</code></p>
+<p>Pour GeoMet-Climat, les usagers pour demander un pas de temps unique ou une plage temporelle :</p>
+<ul>
+<li>Pas de temps unique : <code>RANGESUBSET=B20015</code></li>
+<li>Plage temporelle : <code>RANGESUBSET=B2015:B2019</code></li>
+</ul>
 <p>Notez que la limite pour une seule requête WCS GetCoverage est de 256 bandes à la fois.</p>
 <h4 id="geomet-meteo">GeoMet-Météo</h4>
 <p>Pour les requêtes temporelles WCS avec GeoMet-Météo, veuillez vous référer à section sur <a href="#spécification-du-temps">la spécification du temps dans les requêtes WMS</a> puisque l'utilisation des paramètres <code>TIME</code> et <code>DIM_REFERENCE_TIME</code> demeure la même.</p>
